use existing filter

--- a/client/analytics/components/report-table/style.scss
+++ b/client/analytics/components/report-table/style.scss
@@ -20,3 +20,9 @@
 		}
 	}
 }
+
+.woocommerce-table__item .woocommerce-rating {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
